--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "classnames": "^2.3.2",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
-    "next": "13.4.19",
+    "fuse.js": "^7.0.0",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
