--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "fuse.js": "^7.0.0",
+    "imask": "^7.5.0",
     "next": "^13.5.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-modal": "^3.16.1"
   },
   "devDependencies": {
     "sass": "^1.69.3"
