--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.16.1",
     "classnames": "^2.3.2",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
@@ -16,6 +17,9 @@
     "imask": "^7.5.0",
     "next": "^13.5.6",
     "react": "18.2.0",
+    "react-datepicker": "^6.6.0",
+    "react-datetime": "^3.2.0",
+    "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1"
   },
